Fixed footer on mobile screen

--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -17,6 +17,7 @@
 html {
   scroll-behavior: smooth;
   overflow-x: hidden;
+  font-display: swap;
 }
 
 body {
@@ -233,15 +234,12 @@ header a {
 
 .social {
   display: flex;
-  flex-wrap: wrap;
   justify-content: center;
-  margin: 32px;
 }
 
 .social-icon {
   width: 50px;
   height: 50px;
-  margin-right: 16px;
   transition-duration: 0.3s;
   transition-timing-function: ease-in-out;
 }
@@ -262,7 +260,7 @@ footer {
 
 .social a {
   text-decoration: none;
-  padding: 0 16px;
+  margin: 0 16px;
   color: var(--primary);
 }
 
@@ -326,6 +324,12 @@ footer {
 
   .container h3 {
     margin-bottom: 16px;
+  }
+}
+
+@media only screen and (max-width: 420px) {
+  .social a {
+    margin: 0 8px;
   }
 }
 
